--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://mongo:AeDBbTHBixcXwzqQznKikscSsWwpIFyP@mongodb.railway.internal:27017
+MONGO_URI=mongodb+srv://admin:Jainrishav123@cluster0.bjv1unt.mongodb.net/nishubhai?retryWrites=true&w=majority
 JWT_SECRET=your_secret_key
 RAZORPAY_KEY_ID=xxxx
 RAZORPAY_KEY_SECRET=xxxx
